--- a/index.html
+++ b/index.html
@@ -1,13 +1,103 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrAnimes César</title>
+    <title>BrAnimes</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
-    <h1>BrAnimes César</h1>
-    
 
+<body>
+    <header>
+        <div>
+            <section>
+                <img src="imagens/logo.png">
+            </section>
+            <section>
+                <section>
+                    Seus melhores animes em um único lugar.
+                </section>
+                <nav>
+                    <a href="index.html">home</a>
+                    <a href="programação.html">Programação</a>
+                    <a href="galeria.html">Galeria de Animes</a>
+                    <a href="planos.html">Planos Plus</a>
+                    <a href="contato.html">Contato</a>
+                </nav>
+            </section>
+        </div>
+
+    </header>
+    <main>
+        <section>
+            <p>Os melhores Animes</p>
+            <p>Aproveite milhares de episódios legendados e exclusivamente dublados de animes selecionados, além de
+                filmes, animes clássicos e as últimas novidades do Japão. </p>
+            <a href="">Assistir on-line</a>
+        </section>
+
+        <section>
+            <h3>Novas dublagems</h3>
+            <figure>
+                <img src="imagens/Demon Slayer.jpg">
+                <figcaption>Demon Slayer</figcaption>
+            </figure>
+            <figure>
+                <img src="imagens/AttackOnTitan.jpg">
+                <figcaption>Attack On Titan</figcaption>
+            </figure>
+            <figure>
+                <img src="imagens/My Hero Academia.jpg">
+                <figcaption>My hero Academia</figcaption>
+            </figure>
+            <figure>
+                <img src="imagens/Fairy Tail.jpg">
+                <figcaption>Fairu Tail</figcaption>
+            </figure>
+        </section>
+        <section>
+            <h3>Top 4</h3>
+            <figure>
+                <img src="imagens/onepiece.jpg">
+                <figcaption>One Piece</figcaption>
+            </figure>
+            <figure>
+                <img src="imagens/Tokyo Ghoul.jpg">
+                <figcaption>Tokyo Ghoul</figcaption>
+            </figure>
+            <figure>
+                <img src="imagens/naruto.jpg">
+                <figcaption>Naruto</figcaption>
+            </figure>
+            <figure>
+                <img src="imagens/dragonballz.jpg">
+                <figcaption>DBZ</figcaption>
+            </figure>
+
+        </section>
+        <section>
+            <p>Animes Sem Anúncios com Premium Plus <br>
+                por 24,90 ao mês </p>
+
+            <p>Aproveite milhares de episódios legendados e exclusivamente dublados de animes selecionados, além de
+                filmes, e encontre sucessos, clássicos e as últimas novidades do Japão. </p>
+            <a href="">Assine o plano Plus</a>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <nav>
+                <p>2020-21 BrAnimes Produções. Todos os direitos reservados </p>
+                <a href="sobre.html">Sibre Nós</a>
+                <a href="suporte.html">Suporte ao Cliente</a>
+                <a href="termos.html">Termos de Uso</a>
+                <a href="politica.html">Politica de privacidade</a>
+            </nav>
+        </div>
+
+
+    </footer>
 </body>
+
 </html>
