acerto erros antigos de nomeclaturas

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div>
             <nav>
                 <p>2020-21 BrAnimes Produções. Todos os direitos reservados </p>
-                <a href="sobre.html">Sibre Nós</a>
+                <a href="sobre.html">Sobre Nós</a>
                 <a href="suporte.html">Suporte ao Cliente</a>
                 <a href="termos.html">Termos de Uso</a>
                 <a href="politica.html">Politica de privacidade</a>
