Estrutura principal mais index completa

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <nav>
                     <a href="index.html">home</a>
                     <a href="programação.html">Programação</a>
-                    <a href="galeria.html">Galeria de Animes</a>
+                    <a href="galeria.html">Galeria de Animes</a> 
                     <a href="planos.html">Planos Plus</a>
                     <a href="contato.html">Contato</a>
                 </nav>
@@ -38,7 +38,7 @@
         </section>
 
         <section>
-            <h3>Novas dublagems</h3>
+            <h3>Novas dublagens</h3>
             <figure>
                 <img src="imagens/Demon Slayer.jpg">
                 <figcaption>Demon Slayer</figcaption>
@@ -72,7 +72,7 @@
             </figure>
             <figure>
                 <img src="imagens/dragonballz.jpg">
-                <figcaption>DBZ</figcaption>
+                <figcaption>Dragon Ball Z</figcaption>
             </figure>
 
         </section>
