--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BrAnimes</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
     <header>
-        <div>
-            <section>
+        <div class="container">
+            <section id="logo">
                 <img src="imagens/logo.png">
             </section>
-            <section>
+            <section id="direita">
                 <section>
                     Seus melhores animes em um único lugar.
                 </section>
                 <nav>
                     <a href="index.html">home</a>
                     <a href="programação.html">Programação</a>
-                    <a href="galeria.html">Galeria de Animes</a> 
+                    <a href="galeria.html">Galeria de Animes</a>
                     <a href="planos.html">Planos Plus</a>
                     <a href="contato.html">Contato</a>
                 </nav>
@@ -86,7 +87,7 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div class="container">
             <nav>
                 <p>2020-21 BrAnimes Produções. Todos os direitos reservados </p>
                 <a href="sobre.html">Sobre Nós</a>
