--- a/programação.html
+++ b/programação.html
@@ -5,24 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BrAnimes César</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
     <header>
-        <div>
-            <section>
+        <div class="container">
+            <section id="logo">
                 <img src="imagens/logo.png">
             </section>
-            <section>
+            <section id="direita">
                 <section>
                     Seus melhores animes em um único lugar.
                 </section>
                 <nav>
-                   <a href="index.html">home</a>
-                   <a href="programação.html">Programação</a>
-                   <a href="galeria.html">Galeria de Animes</a>
-                   <a href="planos.html">Planos Plus</a>
-                   <a href="contato.html">Contato</a>
+                    <a href="index.html">home</a>
+                    <a href="programação.html">Programação</a>
+                    <a href="galeria.html">Galeria de Animes</a>
+                    <a href="planos.html">Planos Plus</a>
+                    <a href="contato.html">Contato</a>
                 </nav>
             </section>
         </div>
@@ -30,6 +32,92 @@
     </header>
     <main>
 
+        <h1>Programação Semanal - 15/03 - 19/03</h1>
+
+        <section>
+            <p>Não perca os mais recentes episódios de catálogo, filmes e muito mais.</p>
+        </section>
+
+        <section>
+            <h3>Segunda-feira - 15/03</h3>
+            <article>
+                <img src="imagens/AttackOnTitan.jpg">
+                <section>
+                    <strong>Attack On Titan</strong>
+                    <img src="imagens/star.png">
+                    <p>18:00 / Episódios 20</p>
+                </section>
+            </article>
+        </section>
+        <hr>
+        <section>
+            <h3>Terça-feira - 16/03 </h3>
+            <article>
+                <img src="imagens/Demon Slayer.jpg">
+                <section>
+                    <strong>Demon Slayer</strong>
+                    <img src="imagens/star.png">
+                    <p>19:00 / Episódios 12</p>
+                </section>
+            </article>
+            <article>
+                <strong>Fairy Tail</strong>
+                <img src="imagens/Fairy Tail.jpg">
+                <p>18:00 / Episódios 122</p>
+            </article>
+        </section>
+        <hr>
+        <section>
+            <h3>Quarta-feira - 17/03 </h3>
+            <article>
+                <img src="imagens/dragonballz.jpg">
+                <section>
+                    <strong>Dragon Ball</strong>
+                    <img src="imagens/star.png">
+                    <p>14:00 Episódios 84 </p>
+                </section>
+            </article>
+        </section>
+        <hr>
+        <section>
+            <h3>Quinta-feira 18/03</h3>
+            <article>
+                <img src="imagens/onepiece.jpg">
+                <section>
+                    <strong> One Piece</strong>
+                    <img src="imagens/star.png">
+                    <p>18:00 / Episódio 984</p>
+                </section>
+            </article>
+        </section>
+        <hr>
+        <section>
+            <h3>Sexta-feira 19/03</h3>
+            <article>
+                <img src="imagens/My Hero Academia.jpg">
+                <section>
+                    <setron>My hero Academia</setron>
+                    <img src="imagens/star.png">
+                    <p>17:00 / Episódio 55</p>
+                </section>
+            </article>
+            <article>
+                <img src="imagens/naruto.jpg">
+                <section>
+                    <strong>Naruto</strong>
+                    <img src="imagens/star.png">
+                    <p>18:00 / Episódios 102</p>
+                </section>
+            </article>
+            <article>
+                <img src="imagens/Tokyo Ghoul.jpg">
+                <section>
+                    <strong>Tokyo Ghoul</strong>
+                    <img src="imagens/star.png">
+                    <p>19:00 / Episódios 92</p>
+                </section>
+            </article>
+        </section>
 
     </main>
     <footer>
