--- a/suporte.html
+++ b/suporte.html
@@ -5,24 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BrAnimes César</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
     <header>
-        <div>
-            <section>
+        <div class="container">
+            <section id="logo">
                 <img src="imagens/logo.png">
             </section>
-            <section>
+            <section id="direita">
                 <section>
                     Seus melhores animes em um único lugar.
                 </section>
                 <nav>
-                   <a href="index.html">home</a>
-                   <a href="programação.html">Programação</a>
-                   <a href="galeria.html">Galeria de Animes</a>
-                   <a href="planos.html">Planos Plus</a>
-                   <a href="contato.html">Contato</a>
+                    <a href="index.html">home</a>
+                    <a href="programação.html">Programação</a>
+                    <a href="galeria.html">Galeria de Animes</a>
+                    <a href="planos.html">Planos Plus</a>
+                    <a href="contato.html">Contato</a>
                 </nav>
             </section>
         </div>
@@ -30,6 +32,7 @@
     </header>
     <main>
 
+            <h1>Suporte ao cliente</h1>
 
     </main>
     <footer>
